@@ -1,6 +1,12 @@
 Change log file for Exim from version 4.21
 -------------------------------------------
 
+Exim version 4.next
+-------------------
+JH/01 Bug 1922: Support IDNA2008.  This has slightly different conversion rules
+      than -2003 did; needs libidn2 in addition to linidn.
+
+
 Exim version 4.88
 -----------------
 JH/01 Use SIZE on MAIL FROM in a cutthrough connection, if the destination
